fuse-jobs-service/yaml-misc-files/svc-fuse-jobs-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: fuse-jobs-service
  name: fuse-jobs-service
spec:
  ports:
  - name: 8778-tcp
    port: 8778
    protocol: TCP
    targetPort: 8778
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: 9779-tcp
    port: 9779
    protocol: TCP
    targetPort: 9779
  selector:
    app: fuse-jobs-service
    deploymentconfig: fuse-jobs-service
  sessionAffinity: None
  type: ClusterIP
