fuse-jobs-service/yaml-misc-files/tmp.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  labels:
    app: fuse-jobs-service
  name: fuse-jobs-service
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    app: fuse-jobs-service
    deploymentconfig: fuse-jobs-service
  strategy:
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
      labels:
        app: fuse-jobs-service
        deploymentconfig: fuse-jobs-service
    spec:
      containers:
      - env:
        - name: MYSQL_SERVICE_DATABASE
          value: integrationdb
        - name: MYSQL_SERVICE_NAME
          value: mysql
        - name: MYSQL_SERVICE_PASSWORD
          value: mysql
        - name: MYSQL_SERVICE_USERNAME
          value: mysql
        image: docker-registry.default.svc:5000/demo-batch-fuse/fuse-jobs-service
        imagePullPolicy: Always
        name: fuse-jobs-service
        ports:
        - containerPort: 8778
          protocol: TCP
        - containerPort: 8080
          protocol: TCP
        - containerPort: 9779
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /job/storage/
          name: volume-jtpmc
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: volume-jtpmc
        persistentVolumeClaim:
          claimName: job-storage
  test: false
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - fuse-jobs-service
      from:
        kind: ImageStreamTag
        name: fuse-jobs-service:latest
        #namespace: demo-batch-fuse
    type: ImageChange
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: fuse-jobs-service
  name: fuse-jobs-service
spec:
  ports:
  - name: 8778-tcp
    port: 8778
    protocol: TCP
    targetPort: 8778
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: 9779-tcp
    port: 9779
    protocol: TCP
    targetPort: 9779
  selector:
    app: fuse-jobs-service
    deploymentconfig: fuse-jobs-service
  sessionAffinity: None
  type: ClusterIP
